unpackaged/main/default/objects/Integration_Log__c/fields/FTP_File_Name__c.field-meta.xml
<CustomField>
    <fullName>FTP_File_Name__c</fullName>
    <label>FTP File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>