unpackaged/main/default/objects/Integration_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Download Complete</fullName>
            </value>
            <value>
                <fullName>Process Completed</fullName>
            </value>
            <value>
                <fullName>Upload Complete</fullName>
            </value>
            <value>
                <fullName>Ready to Process</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>