unpackaged/main/default/objects/Integration_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ignition Downtime Export</fullName>
            </value>
            <value>
                <fullName>ProCount Export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>