unpackaged/main/default/objects/Integration_Log__c/listViews/Logs_In_Error.listView-meta.xml
<ListView>
    <fullName>Logs_In_Error</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Log__c</columns>
    <columns>FTP_File_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Error</value>
    </filters>
    <label>Logs In Error</label>
</ListView>